# semantic-tool-router

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: live_mcp_ci_smoke.json  live_mcp_suite.json  tasks.json
benchmarks/results/: ablation.json  ablation.md  agent_eval.md  agent_eval_execute.md  agent_eval_live.md  agent_eval_llm.md  agent_eval_rank1.json  comparison.json  comparison.md  failures_bge.json  failures_bge.md  live_mcp_baseline.json  live_mcp_baseline.md
docs/: benchmark-contributing.md  research-plan.md  workshop-paper-outline.md
examples/: end_to_end_demo.ipynb  langchain_integration.py  live_mcp_demo.ps1  llamaindex_integration.py  reranker_demo.py  tools.json
src/semantic_tool_router/: __init__.py  __main__.py  ablation.py  agent_eval.py  bm25.py  cli.py  comparison.py  embeddings.py  evaluation.py  live_benchmark.py  llm_selector.py  mcp.py  mcp_execution.py  models.py  registry.py  reranker.py  router.py  scoring.py  suite_validation.py  tool_enrichment.py
tests/: test_ablation.py  test_agent_eval.py  test_bm25.py  test_cli.py  test_comparison.py  test_embeddings.py  test_evaluation.py  test_live_benchmark.py  test_llm_selector.py  test_mcp.py  test_mcp_execution.py  test_reranker.py  test_router.py  test_scoring.py  test_suite_validation.py  test_tool_enrichment.py
tests/fixtures/: fake_mcp_server.py
